--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-streamlit>=1.30.0
-torch>=2.0.0
-torchvision>=0.15.0
-transformers>=4.35.0
-pillow>=10.0.0
-numpy>=1.24.0
-pandas>=2.0.0
-matplotlib>=3.7.0
-opencv-python-headless>=4.8.0
-requests>=2.31.0
-beautifulsoup4>=4.12.0
-python-dotenv>=1.0.0
+streamlit
+torch
+torchvision
+transformers
+requests
+beautifulsoup4
+opencv-python
+pillow
+pandas
+numpy
+matplotlib
+scikit-learn
+google-generativeai
+python-dotenv
