--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,28 @@
-streamlit
-torch
-torchvision
-transformers
-requests
-beautifulsoup4
-opencv-python
-pillow
-pandas
-numpy
-matplotlib
-scikit-learn
-google-generativeai
-python-dotenv
-openai
+# Core dependencies
+numpy>=1.24.0
+pandas>=2.0.0
+opencv-python>=4.8.0
+pillow>=10.0.0
+scikit-learn>=1.3.0
+
+# Deep Learning
+torch>=2.0.0
+torchvision>=0.15.0
+timm>=0.9.0
+
+# SAM 2
+sam2  # Segment Anything Model 2
+
+# Web scraping
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+
+# UI
+streamlit>=1.28.0
+
+# Utilities
+tqdm>=4.66.0
+pyyaml>=6.0
+
+# Google Gemini (optional, for LLM reports)
+google-generativeai>=0.3.0
